# graphorge

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  environment.yml  environment_mac_os.yml  environment_macos.yml  genindex.html  index.html  license.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: api.doctree  index.doctree  license.doctree
_autosummary/: graphorge.gnn_base_model.data.graph_data.GraphData.html  graphorge.gnn_base_model.data.graph_data.html  graphorge.gnn_base_model.data.graph_data.new_file_path_with_int.html  graphorge.gnn_base_model.data.graph_dataset.GNNGraphDataset.html  graphorge.gnn_base_model.data.graph_dataset.GNNGraphDatasetInMemory.html  graphorge.gnn_base_model.data.graph_dataset.get_dataset_sample_files_from_dir.html  graphorge.gnn_base_model.data.graph_dataset.get_pyg_data_loader.html  graphorge.gnn_base_model.data.graph_dataset.get_subset_indices_mapping.html  graphorge.gnn_base_model.data.graph_dataset.html  graphorge.gnn_base_model.data.graph_dataset.split_dataset.html  graphorge.gnn_base_model.data.graph_dataset.write_graph_dataset_summary_file.html  graphorge.gnn_base_model.data.graph_dataset.write_summary_file.html  graphorge.gnn_base_model.data.html  graphorge.gnn_base_model.html  graphorge.gnn_base_model.model.gnn_architectures.GraphIndependentNetwork.html  graphorge.gnn_base_model.model.gnn_architectures.GraphInteractionNetwork.html  graphorge.gnn_base_model.model.gnn_architectures.TorchRNNWrapper.html  graphorge.gnn_base_model.model.gnn_architectures.build_fnn.html  (+113 more)
(+12156 files in other folders)
