[metadata]
name = graphorge
version = file: VERSION
author = Bernardo Ferreira
author_email = bernardoferreiraacc@gmail.com
description = Open-source forge of Graph Neural Networks!
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deep-learning, pytorch, graph-neural-networks 
url = https://github.com/BernardoFerreira/graphorge
license = MIT License
license_files = file: LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt


[options.packages.find]
where=src